# fqtl

./: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.md  dummy.hh  factored_regression.hh  factorization.hh  fqtl.hh  fqtl_R_source.R  fqtl_main.cc  fqtl_main.hh  fqtl_mf.cc  fqtl_mf.hh  fqtl_zscore.cc  fqtl_zscore.hh  index.md  qtl_model.hh  rand_effect.hh  regression.hh
GTEx/: Tab_TWAS_AD.md  Tab_TWAS_SCZ.md
R/: RcppExports.R  Wrapper.R
docs/: 404.html  LICENSE-text.html  _config.yml  authors.html  index.html  index.md  pkgdown.yml  sitemap.xml
man/: fit.fqtl.Rd  fit.fqtl.deconv.Rd  fit.fqtl.factorize.Rd  fqtl-package.Rd  fqtl.deconv.Rd  fqtl_mf.Rd  fqtl_plink.Rd  fqtl_regress.Rd  fqtl_util.Rd  nb.normalize.Rd  read.plink.Rd
models/: beta.hh  gamma.hh  gaussian.hh  logit.hh  models.hh
param/: adam.hh  param_col_spike_slab.hh  param_row_spike_slab.hh  param_slab.hh  param_spike_slab.hh  param_two_mixture.hh  parameters.hh
repr/: gaus_repr.hh
src/: .clang-format  Makevars  adam.hh  beta.hh  convergence.hh  dummy.hh  eigen_util.hh  factored_regression.hh  factorization.hh  factorization_weighted.hh  fastgamma.h  gaus_repr.hh  gaussian.hh  gaussian_voom.hh  logit.hh  mathutil.hh  nb.hh  options.hh  param_beta.hh  param_check.hh  param_col_slab.hh  param_col_slab_zero.hh  param_col_spike_gamma.hh  param_col_spike_slab.hh  param_dummy.hh  param_row_spike_slab.hh  param_slab.hh  param_spike_gamma.hh  param_spike_slab.hh  parameters.hh  rcpp_fqtl.cc  rcpp_fqtl.hh  rcpp_plink.cc  rcpp_plink.hh  rcpp_util.cc  rcpp_util.hh  (+7 more)
(+20 files in other folders)
